--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
             </div>
         </div>
 		
-    <!--Cloud-->
-	<div class="cloud floating">
+    <!--Cloud
+	 <div class="cloud floating">
         <img src="assets/img/cloud.png" alt="Ozone">
-    </div>
+     </div>
 
-    <div class="cloud pos1 fliped floating">
+     <div class="cloud pos1 fliped floating">
         <img src="assets/img/cloud.png" alt="Ozone">
-    </div>
+     </div>
 
-    <div class="cloud pos2 floating">
+     <div class="cloud pos2 floating">
         <img src="assets/img/cloud.png" alt="Ozone">
-    </div>
+     </div>
 
-    <div class="cloud pos3 fliped floating">
+     <div class="cloud pos3 fliped floating">
         <img src="assets/img/cloud.png" alt="Ozone">
+     </div> -->
     </div>
-	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
     <script>
