--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="col-sm-12 align-center">
 				    <!--Contact -->
 					<h3><i class="fa fa-contact"></i> CONTACT </h3>
-					<h4><i class="fa fa-building-o"></i>  HQ Córdoba </h4>
+					<h4><i class="fa fa-building-o"></i> Córdoba HQ Office </h4>
 					<h4><i class="fa fa-map-marker"></i> República de Siria 641 <h4>
-					<h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1 877 862 9615  </a><h4>
+					<h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1  877  862  9615  </a><h4>
 					<h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
             </div>
     </div>
