Change Index Logo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<img src="assets/img/logo.png" alt="Ozone" class="top-logo">
 							</div>
 
 						<!-- Nav -->
