--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="title" content="Ozone | Beyond Cloud">
     <meta name="ROBOTS" content="Ozone">
-    <meta name="description" content="Beyond Cloud">
+    <meta name="description" content="Ozone | Beyond Cloud">
     <meta name="abstract" content="Ozone">
    
-    <meta name="author" content="www.ozoneops.com">
-    <meta name="publisher" content="www.ozoneops.com">
-    <meta name="copyright" content="www.ozoneops.com">
+    <meta name="author" content="German Ignacio Schinner">
+    <meta name="publisher" content="Ozone | Beyond Cloud">
+    <meta name="copyright" content="Ozone | Beyond Cloud">
     <link rel="shortcut icon" href="assets/img/favicon.png">
 
     <!-- Bootstrap -->
