--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Verti by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>OZONE | Beyond Cloud</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,17 +17,16 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<img src="assets/img/logo.png" alt="Ozone" class="top-logo">
+							    <a href="#"><img src="assets/img/logo.png" alt="Ozone" class="top-logo"></a>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
+											<li><a href="#">Who</a></li>
 											<li><a href="#">Magna phasellus</a></li>
 											<li>
 												<a href="#">Phasellus consequat</a>
