--- a/index.html
+++ b/index.html
@@ -24,26 +24,16 @@
 							<nav id="nav">
 								<ul>
 									<li>
-										<a href="#">Dropdown</a>
+										<a href="#">Home</a>
 										<ul>
-											<li><a href="#">Who</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#"></a></li>
+											<li><a href="#">DevOps</a></li>
+											<li><a href="#">Goals</a></li>
+											<li><a href="#">We are beyond</a></li>
+											<li><a href="#">Contact</a></li>
 										</ul>
-									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-								</ul>
+											</li>
+										</ul>
 							</nav>
 
 					</header>
@@ -53,15 +43,11 @@
 				<div id="banner-wrapper">
 					<div id="banner" class="box container">
 						<div class="row">
-							<div class="7u 12u(medium)">
+							<div class="8u 12u(medium) important(medium)">
 								<h2>Hi. This is Verti.</h2>
 								<p>It's a free responsive site template by HTML5 UP</p>
 							</div>
 							<div class="5u 12u(medium)">
-								<ul>
-									<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
-									<li><a href="#" class="button alt big icon fa-question-circle">More info</a></li>
-								</ul>
 							</div>
 						</div>
 					</div>
@@ -167,7 +153,7 @@
 						<div class="row">
 							<div class="3u 6u(medium) 12u$(small)">
 
-								<!-- Links -->
+								<!-- Links
 									<section class="widget links">
 										<h3>Random Stuff</h3>
 										<ul class="style2">
@@ -181,8 +167,7 @@
 
 							</div>
 							<div class="3u 6u$(medium) 12u$(small)">
-
-								<!-- Links -->
+							
 									<section class="widget links">
 										<h3>Random Stuff</h3>
 										<ul class="style2">
@@ -197,7 +182,6 @@
 							</div>
 							<div class="3u 6u(medium) 12u$(small)">
 
-								<!-- Links -->
 									<section class="widget links">
 										<h3>Random Stuff</h3>
 										<ul class="style2">
@@ -207,7 +191,7 @@
 											<li><a href="#">Felis varius pellentesque potenti</a></li>
 											<li><a href="#">Nullam scelerisque blandit leo</a></li>
 										</ul>
-									</section>
+									</section> -->
 
 							</div>
 							<div class="3u 6u$(medium) 12u$(small)">
@@ -215,15 +199,15 @@
 								<!-- Contact -->
 									<section class="widget contact last">
 										<h3>Contact Us</h3>
-										<ul>
+										<!-- <ul>
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
+										</ul> -->
+										<p>123 Fake Street<br />
+										Cordoba, TN 00000<br />
 										(800) 555-0000</p>
 									</section>
 
@@ -233,7 +217,7 @@
 							<div class="12u">
 								<div id="copyright">
 									<ul class="menu">
-										<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										<li>&copy; OZONE All rights reserved</li>
 									</ul>
 								</div>
 							</div>
