--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>OZONE - Beyond Cloud</title>
+<title>Ozone | Beyond Cloud</title>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <meta name="description" content="Ozone | Beyond Cloud">
     <meta name="abstract" content="Ozone">
    
-    <meta name="author" content="German Ignacio Schinner">
+    <meta name="author" content="Ozone | Beyond Cloud">
     <meta name="publisher" content="Ozone | Beyond Cloud">
     <meta name="copyright" content="Ozone | Beyond Cloud">
     <link rel="shortcut icon" href="assets/img/favicon.png">
