--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <meta name="ROBOTS" content="Ozone">
     <meta name="description" content="Ozone | Beyond Cloud">
     <meta name="abstract" content="Ozone">
-   
     <meta name="author" content="Ozone | Beyond Cloud">
     <meta name="publisher" content="Ozone | Beyond Cloud">
     <meta name="copyright" content="Ozone | Beyond Cloud">
-    <link rel="shortcut icon" href="assets/img/favicon.png">
-
+    <link rel="shortcut icon" href="assets/img/OzoneFavicon.png">
+ 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/animations.css">
 
-    <!-- siimple style -->
+    <!-- Simple Style -->
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,70 +28,66 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
-
 <body>
-    <div id="wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                    <img src="assets/img/logo.png" alt="Ozone" class="top-logo">
-                    <div class="container" style="margin-top: 10px">
-                    <h3 class="subtitle" style="margin-top: 60px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
-                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px">We are professionals with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration by implementing IT Tools & Best Practices to maximize the efficiency of Orchestrated Environments across several organizations to anywhere in the world.</h2>
-                    </div>
-                    <hr>
-                    <div class="container" style="margin-top: 10px">
-                    <div class="col-sm-12 col-md-12 col-lg-6">
-                        <h3 class="subtitle" style="margin-top: 60px">STRAIGHTFOWARD</h3>
-                        <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 50px; padding-bottom: 20px">
-                        <img src="assets/img/collaboration.png" alt="Collaboration">
-                    </div> 
-                    </div>
-                    <hr>
-                    <div class="container" style="margin-top: 10px">
-                    <div class="col-sm-12 col-md-12 col-lg-6">
-                        <h3 class="subtitle" style="margin-top: 60px">BEYOND</h3>
-                        <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 20px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
-                        <div class="col-sm-12 col-md-12 col-lg-12" style="padding-top: 50px; padding-bottom: 20px">
-                            <img src="assets/img/PlatformsGrey.png" alt="Platforms" class="top-logo">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-6" style="margin-top: 40px">
-                        <h3 class="subtitle" style="color: lightskyblue">Convenient Rates</h3>
-                        <h3 class="subtitle">AutoScaled Services & Pricing</h3>
-                        <h3 class="subtitle" style="color: lightskyblue">Competitive time ranges location</h3>
-                        <h3 class="subtitle">Cultural empathy with working peers</h3>
-                        <h3 class="subtitle" style="color: lightskyblue">Evolutionary & adaptive working methods</h3>
-                        <h3 class="subtitle">Unlimited talent and ever expanding skills</h3>
-                        <h3 class="subtitle" style="color: lightskyblue">Transparent mixed-tools integration</h3>
-                        <h3 class="subtitle">Multifaceted approaches on projects</h3>
-                        <h3 class="subtitle" style="color: lightskyblue">Multiple cloud platforms handling</h3>
-                        <h3 class="subtitle">Agile & Maturity modeling</h3>
-                    </div>
+    <div id="wrapper" style="padding-top: 100px">
+        <div class="contanier col-sm-12 col-md-12 col-lg-12">                 
+            <!-- Section -->
+            <div class="container">
+                <img src="assets/img/OzoneLogo.png" alt="Ozone" class="top-logo">
+            </div>
+            <div class="container" style="margin-top: 100px">
+                <h3 class="subtitle" style="margin-top: 60px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
+                <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px">We are professionals with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
+            </div>
+            <hr>
+            <!-- Section -->
+            <div class="container" style="margin-top: 10px">
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <h3 class="subtitle" style="margin-top: 60px">STRAIGHTFOWARD</h3>
+                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 50px; padding-bottom: 20px">
+                    <img src="assets/img/Collaboration.png" alt="Collaboration">
+                </div> 
+            </div>
+            <hr>
+            <!-- Section -->
+            <div class="container" style="margin-top: 10px">
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <h3 class="subtitle" style="margin-top: 60px">BEYOND</h3>
+                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 20px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
+                    <div class="col-sm-12 col-md-12 col-lg-12" style="padding-top: 50px; padding-bottom: 20px; padding-right: 20px">
+                        <img src="assets/img/PlatformsBlue.png" alt="Platforms" class="top-logo">
                     </div>
                 </div>
-                <hr>
-    </div>
-    </div>
-    <div class="aligncenter">
-        <hr>
-            <div class="col-sm-12 align-center">
-                    <!--Contact -->
-                    <h3><i class="fa fa-contact"></i> CONTACT </h3>
-                    <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1  877  862  9615  </a><h4>
-                    <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
-            </div>
-    </div>
-            <div class="row">
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
-                    </p>
+                <div class="col-sm-12 col-md-12 col-lg-6" style="margin-top: 40px">
+                    <h3 class="subtitle" style="color: grey">Convenient Rates</h3>
+                    <h3 class="subtitle" style="color: darkgrey">AutoScaled Services & Pricing</h3>
+                    <h3 class="subtitle" style="color: grey">Competitive time ranges location</h3>
+                    <h3 class="subtitle" style="color: darkgrey">Cultural empathy with working peers</h3>
+                    <h3 class="subtitle" style="color: grey">Evolutionary & adaptive working methods</h3>
+                    <h3 class="subtitle" style="color: darkgrey">Unlimited talent and ever expanding skills</h3>
+                    <h3 class="subtitle" style="color: grey">Transparent mixed-tools integration</h3>
+                    <h3 class="subtitle" style="color: darkgrey">Multifaceted approaches on projects</h3>
+                    <h3 class="subtitle" style="color: grey">Multiple cloud platforms handling</h3>
+                    <h3 class="subtitle" style="color: darkgrey">Agile & Maturity modeling</h3>
                 </div>
             </div>
         </div>
-        
+    </div>
+    <div class="align-center" style="text-align: -webkit-center">
+        <hr>
+        <!--Contact -->
+        <h3><i class="fa fa-contact"></i> CONTACT </h3>
+        <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
+        <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
+    </div>
+    <div class="align-center" style="text-align: -webkit-center">
+        <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
+        </p>
+    </div> 
+
+
     <!--Cloud
      <div class="cloud floating">
         <img src="assets/img/cloud.png" alt="Ozone">
