--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <![endif]-->
 </head>
 <body>
-    <div id="wrapper" style="padding-top: 100px">
+    <div id="wrapper" style="padding-top: 200px">
         <div class="contanier col-sm-12 col-md-12 col-lg-12">                 
             <!-- Section -->
             <div class="container">
@@ -75,18 +75,19 @@
             </div>
         </div>
     </div>
-    <div class="align-center" style="text-align: -webkit-center">
+    <div class="wrapper">
         <hr>
-        <!--Contact -->
-        <h3><i class="fa fa-contact"></i> CONTACT </h3>
-        <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
-        <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
+        <div class="align-center" style="text-align: -webkit-center">
+            <!--Contact -->
+            <h3><i class="fa fa-contact"></i> CONTACT </h3>
+            <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
+            <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
+        </div>
+        <div class="align-center" style="text-align: -webkit-center">
+            <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
+            </p>
+        </div> 
     </div>
-    <div class="align-center" style="text-align: -webkit-center">
-        <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
-        </p>
-    </div> 
-
 
     <!--Cloud
      <div class="cloud floating">
