Change on Sliders

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
         <div class="swiper-container fullscreen">
             <div class="swiper-wrapper">
 
-                <!-- Slide 3
+                <!-- Slide 3 -->
                 <div class="swiper-slide overlay" style="background: url('images/slider-principal1.jpg'); background-size: cover;">
                     <div class="slider-content container">
                         <div class="col-md-12">
-                            <h3>Tenemos tu <br> <span>Departamento</span></h3>
+                            <h3>Vendemos <br> <span>Cloud</span></h3>
                             <h4>Conocelos <span>y enamorate!</span></h4>
                             <div class="cta">
                                 <a href="desarrollos.html" class="btn">Ver Más</a>
@@ -132,11 +132,11 @@
                 </div>
                 <!-- End of Slide 3 -->
 
-                <!-- Slide 2
+                <!-- Slide 2 -->
                 <div class="swiper-slide overlay" style="background: url('images/slider-principal2.jpg'); background-size: cover;">
                     <div class="slider-content container">
                         <div class="col-md-12">
-                            <h3>Chateau <br> <span>Harmonie</span></h3>
+                            <h3>Continuos <br> <span>Integration</span></h3>
                             <h4>El estilo de vida que <span>siempre soñaste</span></h4>
                             <div class="cta">
                                 <a href="desarrollos/chateau-harmonie.html" class="btn">¡Conocerlo Ya!</a>
