--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="wrapper" style="padding-top: 200px">
         <div class="contanier col-sm-12 col-md-12 col-lg-12">                 
             <!-- Section -->
-            <div class="container">
-                <img src="assets/img/OzoneLogo.png" alt="Ozone" class="top-logo">
+            <div class="container" style="padding-right: 100px; padding-left: 100px">
+                <img src="assets/img/Ozone.png" alt="Ozone" class="top-logo" style="padding-right: 100px; padding-left: 100px">
             </div>
             <div class="container" style="margin-top: 100px">
                 <h3 class="subtitle" style="margin-top: 60px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
@@ -44,7 +44,7 @@
             <div class="container" style="margin-top: 10px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h3 class="subtitle" style="margin-top: 60px">STRAIGHTFOWARD</h3>
-                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
+                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 50px; padding-bottom: 20px">
                     <img src="assets/img/Collaboration.png" alt="Collaboration">
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <div class="wrapper">
+    <div class="row col-sm-12 col-md-12 col-lg-12" >
         <hr>
         <div class="align-center" style="text-align: -webkit-center">
             <!--Contact -->
