--- a/index.html
+++ b/index.html
@@ -29,38 +29,38 @@
     <![endif]-->
 </head>
 <body>
-    <div id="wrapper" style="padding-top: 200px">
+    <div id="wrapper" style="padding-top: 0px">
         <div class="contanier col-sm-12 col-md-12 col-lg-12">                 
             <!-- Section -->
-            <div class="container" style="padding-right: 100px; padding-left: 100px">
-                <img src="assets/img/Ozone.png" alt="Ozone" class="top-logo" style="padding-right: 100px; padding-left: 100px">
+            <div class="container col-sm-12 col-md-12 col-lg-6">
+                <img src="assets/img/OzoneLogoSmall.png" alt="Ozone" class="top-logo" style="padding-left: 75px; padding-right: 75px">
             </div>
-            <div class="container" style="margin-top: 100px">
-                <h3 class="subtitle" style="margin-top: 60px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
-                <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px">We are professionals with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
+            <div class="container" style="margin-top: 75px">
+                <h3 class="subtitle" style="margin-top: 50px; padding-right: 30px; padding-left: 30px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
+                <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">We are professionals with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
             </div>
             <hr>
             <!-- Section -->
-            <div class="container" style="margin-top: 10px">
+            <div class="container" style="margin-top: 75px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 60px">STRAIGHTFOWARD</h3>
-                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 40px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
+                    <h3 class="subtitle" style="margin-top: 50px; padding-right: 30px; padding-left: 30px">STRAIGHTFOWARD</h3>
+                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 50px; padding-bottom: 20px">
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 25px; padding-bottom: 50px; padding-right: 50px; padding-left: 50px">
                     <img src="assets/img/Collaboration.png" alt="Collaboration">
                 </div> 
             </div>
             <hr>
             <!-- Section -->
-            <div class="container" style="margin-top: 10px">
+            <div class="container" style="margin-top: 75px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 60px">BEYOND</h3>
-                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 20px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
-                    <div class="col-sm-12 col-md-12 col-lg-12" style="padding-top: 50px; padding-bottom: 20px; padding-right: 20px">
-                        <img src="assets/img/PlatformsBlue.png" alt="Platforms" class="top-logo">
+                    <h3 class="subtitle" style="margin-top: 50px; padding-right: 30px; padding-left: 30px">BEYOND</h3>
+                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <img src="assets/img/PlatformsBlue.png" alt="Platforms" style="padding: 25px">
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="margin-top: 40px">
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 25px; padding-bottom: 25px; padding-right: 25px; padding-left: 25px">
                     <h3 class="subtitle" style="color: grey">Convenient Rates</h3>
                     <h3 class="subtitle" style="color: darkgrey">AutoScaled Services & Pricing</h3>
                     <h3 class="subtitle" style="color: grey">Competitive time ranges location</h3>
