--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <!-- Section -->
             <div class="container" style="margin-top: 75px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 50px; padding-right: 30px; padding-left: 30px">STRAIGHTFOWARD</h3>
+                    <h3 class="subtitle" style="margin-top: 25px; padding-right: 30px; padding-left: 30px">STRAIGHTFOWARD</h3>
                     <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 25px; padding-bottom: 50px; padding-right: 50px; padding-left: 50px">
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-bottom: 25px; padding-right: 25px; padding-left: 25px">
                     <img src="assets/img/Collaboration.png" alt="Collaboration">
                 </div> 
             </div>
@@ -54,13 +54,13 @@
             <!-- Section -->
             <div class="container" style="margin-top: 75px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 50px; padding-right: 30px; padding-left: 30px">BEYOND</h3>
+                    <h3 class="subtitle" style="margin-top: 25px; padding-right: 30px; padding-left: 30px">BEYOND</h3>
                     <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <img src="assets/img/PlatformsBlue.png" alt="Platforms" style="padding: 25px">
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 25px; padding-bottom: 25px; padding-right: 25px; padding-left: 25px">
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 10px; padding-bottom: 10px; padding-right: 25px; padding-left: 25px">
                     <h3 class="subtitle" style="color: grey">Convenient Rates</h3>
                     <h3 class="subtitle" style="color: darkgrey">AutoScaled Services & Pricing</h3>
                     <h3 class="subtitle" style="color: grey">Competitive time ranges location</h3>
