--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <title>Ozone | Beyond Cloud</title>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=2">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="title" content="Ozone | Beyond Cloud">
@@ -13,15 +12,15 @@
     <meta name="publisher" content="Ozone | Beyond Cloud">
     <meta name="copyright" content="Ozone | Beyond Cloud">
     <link rel="shortcut icon" href="assets/img/OzoneFavicon.png">
- 
-    <!-- Bootstrap -->
+     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/animations.css">
-
     <!-- Simple Style -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=2">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -29,39 +28,55 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-    <div id="wrapper" style="padding-top: 0px">
-        <div class="contanier col-sm-12 col-md-12 col-lg-12">                 
-            <!-- Section -->
-            <div class="container col-sm-12 col-md-12 col-lg-6">
-                <img src="assets/img/OzoneLogoSmall.png" alt="Ozone" class="top-logo" style="padding-left: 75px; padding-right: 75px">
-            </div>
-            <div class="container" style="margin-top: 75px">
-                <h3 class="subtitle" style="margin-top: 50px; padding-right: 30px; padding-left: 30px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
-                <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">We are professionals with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
+    <body>
+        <div id="wrapper">
+            <!-- Section 1-->
+            <div class="contanier col-sm-12 col-md-12 col-lg-12" style="margin-top: 50px" >                 
+                <!-- Section A-->
+                <div class="container col-sm-12 col-md-12 col-lg-4">
+                    <img src="assets/img/OzoneLogoBig.png" alt="Ozone" class="top-logo" >
+                </div>
+                <!-- Section B-->
+                <div class="container col-sm-12 col-md-12 col-lg-4">
+                    <h3 class="subtitle" style="padding-top: 50px">DEVOPS & CLOUD INFRASTRUCTURE SERVICES</h3>
+                </div>
+                <!-- Section C-->
+                <div class="container col-sm-12 col-md-12 col-lg-4">
+                    <div class="align-center" style="text-align: -webkit-center">
+                        <!--Contact -->
+                        <h3><i class="fa fa-contact" style="padding-top: 50px"></i> CONTACT </h3>
+                        <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
+                        <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
+                    </div>
+                </div>
+                    <!-- <div class="align-center" style="text-align: -webkit-center">
+                        <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
+                        </p>
+                    </div> -->
             </div>
             <hr>
-            <!-- Section -->
-            <div class="container" style="margin-top: 75px">
+            <!-- Section 2-->
+            <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h3 class="subtitle" style="margin-top: 25px; padding-right: 30px; padding-left: 30px">STRAIGHTFOWARD</h3>
-                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
+                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 25px; padding-right: 30px; padding-left: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
+                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 30px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6" style="padding-bottom: 25px; padding-right: 25px; padding-left: 25px">
-                    <img src="assets/img/Collaboration.png" alt="Collaboration">
+                    <img src="assets/img/CICD.png" alt="CICD">
                 </div> 
             </div>
             <hr>
-            <!-- Section -->
-            <div class="container" style="margin-top: 75px">
+            <!-- Section 3-->
+            <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h3 class="subtitle" style="margin-top: 25px; padding-right: 30px; padding-left: 30px">BEYOND</h3>
-                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 50px; padding-right: 30px; padding-left: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
+                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 25px; padding-right: 30px; padding-left: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
                     <div class="col-sm-12 col-md-12 col-lg-12">
-                        <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 25px">
+                        <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 10px">
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-top: 10px; padding-bottom: 10px; padding-right: 25px; padding-left: 25px">
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-right: 25px; padding-left: 25px">
                     <h3 class="subtitle" style="color: grey">Convenient Rates</h3>
                     <h3 class="subtitle" style="color: darkgrey">AutoScaled Services & Pricing</h3>
                     <h3 class="subtitle" style="color: grey">Competitive time ranges location</h3>
@@ -76,33 +91,28 @@
             </div>
         </div>
     </div>
-    <div class="row col-sm-12 col-md-12 col-lg-12" >
-        <hr>
-        <div class="align-center" style="text-align: -webkit-center">
-            <!--Contact -->
+    <hr>
+    <div class="row" >
+        <!-- <div class="align-center" style="text-align: -webkit-center">
+            
             <h3><i class="fa fa-contact"></i> CONTACT </h3>
             <h4><i class="fa fa-phone"></i> <a href="skype:+1 877 862 9615">  +1   877   862   9615  </a><h4>
             <h4><i class="fa fa-envelope"></i><a href="mailto:hello@ozoneops.com">  hello@ozoneops.com  </a><h4>
-        </div>
-        <div class="align-center" style="text-align: -webkit-center">
-            <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
-            </p>
+        </div> -->
+        <div class="align-center" style="text-align: -webkit-center; padding-bottom: 50px">
+            <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a></p>
         </div> 
     </div>
-
-    <!--Cloud
+    <!-- Cloud
      <div class="cloud floating">
         <img src="assets/img/cloud.png" alt="Ozone">
      </div>
-
      <div class="cloud pos1 fliped floating">
         <img src="assets/img/cloud.png" alt="Ozone">
      </div>
-
      <div class="cloud pos2 floating">
         <img src="assets/img/cloud.png" alt="Ozone">
      </div>
-
      <div class="cloud pos3 fliped floating">
         <img src="assets/img/cloud.png" alt="Ozone">
      </div> -->
