--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         <div id="wrapper">
             <!-- Section 1-->
-            <div class="contanier col-sm-12 col-md-12 col-lg-12" style="margin-top: 50px" >                 
+            <div class="contanier col-sm-12 col-md-12 col-lg-12" style="margin-top: 100px; margin-bottom: 100px">                 
                 <!-- Section A-->
                 <div class="container col-sm-12 col-md-12 col-lg-4">
                     <img src="assets/img/OzoneLogoBig.png" alt="Ozone" class="top-logo" >
@@ -58,8 +58,8 @@
             <!-- Section 2-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 25px; padding-right: 30px; padding-left: 30px">STRAIGHTFOWARD</h3>
-                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 25px; padding-right: 30px; padding-left: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
+                    <h3 class="subtitle" style="margin-top: 0px; padding-left: 30px; padding-right: 30px">STRAIGHTFOWARD</h3>
+                    <h2 class="subtitle" style="margin-top: 0px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
                     <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 30px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6" style="padding-bottom: 25px; padding-right: 25px; padding-left: 25px">
@@ -70,8 +70,8 @@
             <!-- Section 3-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 25px; padding-right: 30px; padding-left: 30px">BEYOND</h3>
-                    <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 25px; padding-right: 30px; padding-left: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
+                    <h3 class="subtitle" style="margin-top: 0px; padding-left: 30px; padding-right: 30px">BEYOND</h3>
+                    <h2 class="subtitle" style="margin-top: 0px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 10px">
                     </div>
@@ -90,6 +90,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <hr>
     <div class="row" >
@@ -116,10 +117,10 @@
      <div class="cloud pos3 fliped floating">
         <img src="assets/img/cloud.png" alt="Ozone">
      </div> -->
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
-    <script>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
+<script>
         
 $(document).ready( function () {
     $('#wrapper').height($(document).height());
