--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
             <!-- Section 2-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 0px; padding-left: 30px; padding-right: 30px">STRAIGHTFOWARD</h3>
-                    <h2 class="subtitle" style="margin-top: 0px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
+                    <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">STRAIGHTFOWARD</h3>
+                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
                     <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 30px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-bottom: 25px; padding-right: 25px; padding-left: 25px">
-                    <img src="assets/img/CICD.png" alt="CICD">
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding: 25px">
+                    <img src="assets/img/DevOps.png" alt="DevOps">
                 </div> 
             </div>
             <hr>
             <!-- Section 3-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 0px; padding-left: 30px; padding-right: 30px">BEYOND</h3>
-                    <h2 class="subtitle" style="margin-top: 0px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
+                    <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">BEYOND</h3>
+                    <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 10px">
                     </div>
