--- a/index.html
+++ b/index.html
@@ -76,16 +76,15 @@
                         <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 10px">
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6" style="padding-right: 25px; padding-left: 25px">
-                    <h3 class="subtitle" style="color: grey">Convenient Rates</h3>
-                    <h3 class="subtitle" style="color: darkgrey">AutoScaled Services & Pricing</h3>
+                <div class="col-sm-12 col-md-12 col-lg-6" style="padding: 25px">
+                    <h3 class="subtitle" style="color: grey">AutoScaled Services & Pricing</h3>
+                    <h3 class="subtitle" style="color: darkgrey">Multiple cloud platforms handling</h3>
                     <h3 class="subtitle" style="color: grey">Competitive time ranges location</h3>
                     <h3 class="subtitle" style="color: darkgrey">Cultural empathy with working peers</h3>
                     <h3 class="subtitle" style="color: grey">Evolutionary & adaptive working methods</h3>
                     <h3 class="subtitle" style="color: darkgrey">Unlimited talent and ever expanding skills</h3>
                     <h3 class="subtitle" style="color: grey">Transparent mixed-tools integration</h3>
                     <h3 class="subtitle" style="color: darkgrey">Multifaceted approaches on projects</h3>
-                    <h3 class="subtitle" style="color: grey">Multiple cloud platforms handling</h3>
                     <h3 class="subtitle" style="color: darkgrey">Agile & Maturity modeling</h3>
                 </div>
             </div>
