--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">BEYOND</h3>
                     <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We have wide experience and skills in technology and business. We are restless, proactive and capable to take ownership of practices, processes and strategies.</h2>
                     <div class="col-sm-12 col-md-12 col-lg-12">
-                        <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 10px">
+                        <img src="assets/img/PlatformsCloudBlue.png" alt="Platforms" style="padding: 25px">
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6" style="padding: 25px">
@@ -85,7 +85,7 @@
                     <h3 class="subtitle" style="color: darkgrey">Unlimited talent and ever expanding skills</h3>
                     <h3 class="subtitle" style="color: grey">Transparent mixed-tools integration</h3>
                     <h3 class="subtitle" style="color: darkgrey">Multifaceted approaches on projects</h3>
-                    <h3 class="subtitle" style="color: darkgrey">Agile & Maturity modeling</h3>
+                    <h3 class="subtitle" style="color: grey">Agile & Maturity modeling</h3>
                 </div>
             </div>
         </div>
