--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+    <![endif]-->n
 </head>
     <body>
         <div id="wrapper">
@@ -34,7 +34,7 @@
             <div class="contanier col-sm-12 col-md-12 col-lg-12" style="margin-top: 100px; margin-bottom: 100px">                 
                 <!-- Section A-->
                 <div class="container col-sm-12 col-md-12 col-lg-4">
-                    <img src="assets/img/OzoneLogoBig.png" alt="Ozone" class="top-logo" >
+                    <a href="http://ozoneops.com"><img src="assets/img/OzoneLogoBig.png" alt="Ozone" class="top-logo" ></a>
                 </div>
                 <!-- Section B-->
                 <div class="container col-sm-12 col-md-12 col-lg-4">
