--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <title>Ozone | Beyond Cloud</title>
 <head>
+    <!-- Head -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="title" content="Ozone | Beyond Cloud">
     <meta name="ROBOTS" content="Ozone">
-    <meta name="description" content="Ozone | Beyond Cloud">
+    <meta name="description" content="DevOps & Cloud Infrastructure Services">
     <meta name="abstract" content="Ozone">
     <meta name="author" content="Ozone | Beyond Cloud">
     <meta name="publisher" content="Ozone | Beyond Cloud">
     <meta name="copyright" content="Ozone | Beyond Cloud">
     <link rel="shortcut icon" href="assets/img/OzoneFavicon.png">
-     <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/bootstrap-theme.css" rel="stylesheet">
@@ -20,8 +21,7 @@
     <!-- Simple Style -->
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- Mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=2">
-
+    <meta name="viewport" content="width=device-width, initial-scale=3">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
