--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <!-- Head -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="title" content="Ozone | Beyond Cloud">
+    <meta name="title" content="Ozone">
     <meta name="ROBOTS" content="Ozone">
     <meta name="description" content="DevOps & Cloud Infrastructure Services">
     <meta name="abstract" content="Ozone">
     <meta name="author" content="Ozone | Beyond Cloud">
     <meta name="publisher" content="Ozone | Beyond Cloud">
-    <meta name="copyright" content="Ozone | Beyond Cloud">
+    <meta name="copyright" content="Ozone">
     <link rel="shortcut icon" href="assets/img/OzoneFavicon.png">
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -119,6 +119,7 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
+
 <script>
         
 $(document).ready( function () {
@@ -141,7 +142,6 @@ function appendResult(userText , className, iconClass){
   $('.result').delay(10000).fadeOut('1000');
 }
 
-
 function register($form) {
     $.ajax({
         type: $form.attr('method'),
@@ -161,6 +161,6 @@ function register($form) {
         }
     });
 }
-    </script>
+</script>
 </body>
 </html>
