la moto del suizo

--- a/index.html
+++ b/index.html
@@ -93,64 +93,36 @@
             <hr>
                 <div class="col-sm-12 col-md-12 col-lg-12">
                     <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">TOOLBOX</h3>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Maintenance and Support</h3>
-                            <dl style="color: grey">
-                              <dt>Windows Server</dt>
-                              <dt>Linux OS</dt>
-                              <dt>(Ubuntu, Debian, CentOS, RHEL)</dt>
-                            </dl>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Server Maintenance and Support</h3>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
                         <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Version Control (SCM)</h3>
-                            <dl style="color: grey">
-                              <dt>Git</dt>
-                              <dt>GitHub</dt>
-                              <dt>Bitbucket</dt>
-                              <dt>Phabricator</dt>
-                            </dl>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Collaboration</h3>
-                            <dl style="color: grey">
-                              <dt>Trello</dt>
-                              <dt>Gira</dt>
-                              <dt>Microsoft TFS Backlog</dt>
-                              <dt>HipChat</dt>
-                              <dt>Slack</dt>
-                              <dt>ServiceNow</dt>
-                              <dt>Basecamp</dt>
-                            </dl>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Collaboration & Backlog</h3>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Containerization</h3>
-                            <dl style="color: grey">
-                              <dt>Docker</dt>
-                              <dt>Docker Swarm</dt>
-                              <dt>Kubernetes</dt>
-                              <dt>Mesosphere DC/OS</dt>
-                            </dl>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Continuous Integration & Delivery</h3>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Agile Containerization</h3>
+                    </div>
+                     <div class="col-sm-12 col-md-12 col-lg-6">
                         <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Cloud, IaaS, PaaS</h3>
-                            <dl style="color: grey">
-                              <dt>Amazon Web Services (AWS)</dt>
-                              <dt>Microsoft Azure</dt>
-                              <dt>Google Cloud Platform (GCP)</dt>
-                              <dt>Digital Ocean</dt>
-                              <dt>Core OS</dt>
-                            </dl>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
                         <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Agile Methodologies & CM</h3>
-                            <dl style="color: grey">
-                              <dt>XP</dt>
-                              <dt>SCRUM</dt>
-                              <dt>Lean/Kanban</dt>
-                              <dt>ITIL</dt>
-                            </dl>
                     </div>
-                </div> 
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Monitoring & Logging</h3>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Automation & Orchestration</h3>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <h3 class="subtitle" style="color: #288dbf; margin-top: 20px; padding-left: 30px; padding-right: 30px">Database & Big Data</h3>
+                    </div> 
             </div>
             <!-- Section Last-->
             <div class="containercol-sm-12 col-md-12 col-lg-12" style="margin-top: 25px" >
