--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
             <hr>
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">STRAIGHTFOWARD</h3>
+                    <h3 class="subtitle" style="margin-top: 20px; padding-left: 30px; padding-right: 30px">STRAIGHTFORWARD</h3>
                     <h2 class="subtitle" style="margin-top: 20px; margin-bottom: 25px; padding-left: 30px; padding-right: 30px">We are a company with more than 20 years of combined consulting experience in Open Source and Infrastructures Administration, by implementing IT Tools & Best Practices, to maximize the efficiency of Orchestrated Environments, across several organizations to anywhere in the world.</h2>
                     <h2 class="subtitle" style="margin-top: 25px; margin-bottom: 30px; padding-right: 30px; padding-left: 30px">Our objective is to make IT management simpler. That’s what motivate us as well as working on open and collaborative circumstances with cloud environments & beyond, always aligned with the DevOps culture.</h2>
                 </div>
