--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                 </div>
                     <!-- <div class="align-center" style="text-align: -webkit-center">
                         <p class="copyright">Copyright &copy; 2017 - <a href="http://ozoneops.com">ozoneops.com</a>
-                        </p>
-                    </div> -->
+                        </p>                    </div> -->
             </div>
             <!-- Section 2-->
             <div class="container col-sm-12 col-md-12 col-lg-12" style="margin-top: 25px">
